objects/Travel_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Destination_State__c</fullName>
        <label>Destination State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OLDExternal Id</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Travel Approvals</relationshipLabel>
        <relationshipName>Travel_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Out_of_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out-of-State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Trip__c</fullName>
        <label>Purpose of Trip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trip_End_Date__c</fullName>
        <label>Trip End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trip_Start_Date__c</fullName>
        <label>Trip Start Date</label>
        <type>Date</type>
    </fields>
    <label>Travel Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_Id__c</columns>
        <columns>Purpose_of_Trip__c</columns>
        <columns>Department__c</columns>
        <columns>Status__c</columns>
        <columns>Trip_Start_Date__c</columns>
        <columns>Trip_End_Date__c</columns>
        <columns>Destination_State__c</columns>
        <columns>Out_of_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Travel Approval #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>